sqlshare/static/styles/sqlshare.css
/* ... */
#js-query-queue-table td { border-bottom: solid 1px #cbcbcb; }
#js-query-queue-table tr:last-of-type td { border: none; }
#js-query-queue-table td a { color: #000; text-decoration: none; }


/* jQuery UI modals and overlay overrides */

.ui-widget-overlay { background: #ccc; }

.ui-dialog { border: 10px solid #316b92; padding: 0; border-radius: 5px; }

.ui-dialog .ui-dialog-titlebar { background: none; border: none; }

.ui-dialog .ui-dialog-title, .ui-dialog h5 { font-size: 16px; font-weight: bold; }


.ui-dialog .ui-dialog-titlebar-close { border: none; background: none; }

.ui-dialog .ui-dialog-titlebar-close.ui-state-hover { background: #aaa; }

.ui-dialog .ui-dialog-content { font-size: 14px; }

.ui-dialog .ui-dialog-content .ss-query-description-edit h4 { font-weight: normal; color: #777; margin-bottom: 20px; }
.ui-dialog .ui-dialog-content .ss-query-description-edit h5 { font-size: 12px; font-weight: bold; color: #999; }



/* Tagging */

.tagit li { border: none; }
.tagit li.ui-state-default { background: #ddd; color: #000; font-weight: normal; font-size: 12px;}

/* More Actions button override */

#action_menu { padding: 0; border:solid 1px #275877; background: #316B92 url(../images/ss-button-gradient.png) repeat-x; 
    color: #fff;
    margin-right: 3px;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    font-size: 13px !important;
}

#action_menu .ui-state-focus, #action_menu .ui-state-active  { background: #3777A1 !important; border:solid 1px #275877 !important; cursor:pointer; }
#action_menu_items { border: solid 1px #ddd; border-radius: 0 !important; font-size: 13px !important; line-height: 20px; width: 180px; text-align: left; }
#action_menu_items li a { line-height: 26px; padding: 0 10px; font-size: 13px !important; }

#action_menu_items .ui-state-focus { background: #edf5ff !important; border: none !important; font-size: 13px !important; color: #0084B5; padding: 1px 11px; line-height: 26px; }

